@@ -37,10 +37,10 @@ extern KApplication*	app;
 GeneralWidget::GeneralWidget( QWidget *parent, const char *name)
   : QWidget(parent, name)
 {
-  QGridLayout *tl = new QGridLayout(this, 10, 4, 10, 10);
+  QGridLayout *tl = new QGridLayout(this, 11, 4, 10, 10);
   tl->addRowSpacing(0, fontMetrics().lineSpacing() - 10); // magic
   box = new QGroupBox(klocale->translate("kppp Setup"), this,"box");
-  tl->addMultiCellWidget(box, 0, 9, 0, 3);
+  tl->addMultiCellWidget(box, 0, 10, 0, 3);
   
   label1 = new QLabel(this,"path");
   label1->setText(klocale->translate("pppd Path:"));
@@ -121,7 +121,19 @@ GeneralWidget::GeneralWidget( QWidget *parent, const char *name)
   connect(chkbox5,SIGNAL(toggled(bool)),this,SLOT(iconify_toggled(bool)));
   tl->addMultiCellWidget(chkbox5, 8, 8, 1, 2);
 
+  chkbox6 = new QCheckBox(klocale->translate("Dock into Panel on Connect"),this,"dockingbox");
+  chkbox6->setMinimumSize(chkbox6->sizeHint());
+  chkbox6->setChecked(gpppdata.get_dock_into_panel());
+  connect(chkbox6,SIGNAL(toggled(bool)),this,SLOT(docking_toggled(bool)));
+  tl->addMultiCellWidget(chkbox6, 9, 9, 1, 2);
+
   tl->activate();
+}
+
+void GeneralWidget::docking_toggled(bool on){
+
+  gpppdata.set_dock_into_panel(on);
+
 }
 
 void GeneralWidget::iconify_toggled(bool on){
