@@ -4,6 +4,7 @@ data_DATA =	Terminal.xpm back.xpm exit.xpm fileopen.xpm \
 		finish.xpm help.xpm kppplogo.xpm modemboth.xpm \
 		modemleft.xpm modemnone.xpm modemright.xpm phone.xpm \
 		start.xpm terminal_both.xpm terminal_left.xpm \
-		terminal_right.xpm
+		terminal_right.xpm dock_none.xpm dock_left.xpm \
+		dock_right.xpm dock_both.xpm 
 
 datadir = $(kde_datadir)/kppp/pics
