@@ -1,0 +1,31 @@
+/* XPM */
+static char * dock_none_xpm[] = {
+"24 24 4 1",
+" 	c None",
+".	c #000000000000",
+"X	c #FFFFFFFFFFFF",
+"o	c #0000FFFF0000",
+"                        ",
+"                        ",
+"                        ",
+"                        ",
+" ...................... ",
+" .XXXXXXXXXXXXXXXXXXXX. ",
+" .X..................X. ",
+" .X..................X. ",
+" .X..................X. ",
+" .X...XXX......XXX...X. ",
+" .X..XXooo....XXooo..X. ",
+" .X..Xoooo....Xoooo..X. ",
+" .X..Xoooo....Xoooo..X. ",
+" .X...ooo......ooo...X. ",
+" .X..................X. ",
+" .X..................X. ",
+" .X..................X. ",
+" .XXXXXXXXXXXXXXXXXXXX. ",
+" ...................... ",
+"                        ",
+"                        ",
+"                        ",
+"                        ",
+"                        "};
