@@ -1,0 +1,32 @@
+/* XPM */
+static char * dock_right_xpm[] = {
+"24 24 5 1",
+" 	c None",
+".	c #000000000000",
+"X	c #FFFFFFFFFFFF",
+"o	c #0000FFFF0000",
+"O	c #FFFF00000000",
+"                        ",
+"                        ",
+"                        ",
+"                        ",
+" ...................... ",
+" .XXXXXXXXXXXXXXXXXXXX. ",
+" .X..................X. ",
+" .X..................X. ",
+" .X..................X. ",
+" .X...XXX......XXX...X. ",
+" .X..XXooo....XXOOO..X. ",
+" .X..Xoooo....XOOOO..X. ",
+" .X..Xoooo....XOOOO..X. ",
+" .X...ooo......OOO...X. ",
+" .X..................X. ",
+" .X..................X. ",
+" .X..................X. ",
+" .XXXXXXXXXXXXXXXXXXXX. ",
+" ...................... ",
+"                        ",
+"                        ",
+"                        ",
+"                        ",
+"                        "};
